tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__QuantumEye-AAAAAAAAAAAAAAAAAAAE3w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1247,
  "optional_prerequisites": [
    1480,
    1241
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Quantum eyes are required in EV emitters and sensors. Just infuse your ender eye with radon to get one.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lQuantum Eye",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
