tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__QuitExhalingDust-AAAAAAAAAAAAAAAAAAAAxw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 199,
  "prerequisites": [
    176
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The QED is used to make only a few things, so I'll just list them here:\n\nMagnum Torch: Prevent mob spawns.\nEnder Quarry, and the Ender-Markers that go with it: Quarry up the landscape, so you can get planet blocks, dirt, etc., unlike miners.\nEnder-Thermic Pump: For nether lava pumping with less lag.\nTransfer Node Energy/Hyper-Energy: Transfers RF, so. useless.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lQuit Exhaling Dusts",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176
  ],
  "rewards": [],
  "tasks": []
}
