tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__RawCarbonFiber-0fzaxas8R8OJzvYvqX5d9w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12338815984776142327,
  "prerequisites": [
    1224
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Alternatively, you can use Raw Carbon Fiber for your Reinforced Circuit Boards.\n\n[note]You can use Epoxid to get a better yield on it![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lRaw Carbon Fiber",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1224
  ],
  "rewards": [],
  "tasks": []
}
