tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__ReactorFuels-AAAAAAAAAAAAAAAAAAAE2w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1243,
  "optional_prerequisites": [
    186,
    187
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "For impure radioactive ores for your nuclear reactor, you can look for pitchblende and uraninite. You can find them on Mars and Phobos at Y 30-60.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lReactor Fuels",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
